recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:6: error: not found: value leght
    avance(leght:Double)
           ^Tree:9: error: not found: value lenght
    return tree(steps-1,lenght,angle,shrink*lenght)  
                        ^Tree:9: error: not found: value lenght
    return tree(steps-1,lenght,angle,shrink*lenght)  
                                            ^Tree:12: error: not found: value lenght
    recule(lenght()*x:Double)
           ^Tree:14: error: not found: value lenght
    return tree(steps+1,lenght,angle*2,shrink*lenght)
                        ^Tree:14: error: not found: value lenght
    return tree(steps+1,lenght,angle*2,shrink*lenght)
                                              ^