recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  
  var x = 0
  if(steps>=1){
  	
    avance(leght:Double)
  	current(steps)
    droite(angle:Double)
  	return tree(steps-1,lenght,angle,shrink*lenght)  
  }
  if(steps==0 ){
    recule(lenght()*x:Double)
    gauche(angle*2:Double)
    return tree(steps+1,lenght,angle*2,shrink*lenght)
  }
  
}
